--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.0",
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "massive": "^4.5.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
